--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,126 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  color: #00B7FF;
+body {
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a{
+  text-decoration: none;
+}
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: 0 auto;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+}
+
+.main{
+  display: flex;
+  flex-direction: column;
+  gap:2rem;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .logo {
+    font-size: 2rem;
+    font-family: "Playwrite US Modern", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .links {
+    padding: 1em;
+    display: flex;
+  
+    justify-content: space-between;
+    list-style: none;
+    gap: 1rem;
+  }
+
+  .link {
+    border: 1px solid black;
+    padding: 0.75em 1em;
+    border-radius: 100px;
+  
+    a {
+      text-decoration: none;
+      color: black;
+    }
+  }
+
+  .active {
+    background-color: black;
+  
+    a {
+      text-decoration: none;
+      color: white;
+    }
+  }
+}
+
+.section{
+  border-radius: 24px;
+  background-color: ghostwhite;
+  h1{
+    text-align: center;
+    margin: 1em 0em;
+  }
+}
+
+.categories{
+  padding: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+ 
+}
+
+.category{
+  padding: .75em 1em;
+  border-radius: 100px;
+  background-color: black;
+  color: white;
+}
+
+.instruments{
+  padding: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-rows: auto;
+  gap: 1em;
+}
+
+.instrument{
+  border: 1px solid black;
+  border-radius: 24px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 1em;
+
+  color: black;
+  font-weight: bold;
+  img{
+    width: 100%;
+    object-fit:cover ;
+  }
+}
+
+
+
+footer {
+  padding: 1em;
+  text-align: center;
 }
