Add link on logo to homepage

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="nav">
-  <div class="logo">Musicals</div>
+  <div class="logo"><a href="/catalog/">Musicals</a></div>
   <ul class="links">
     <% if(active=="instrument"){ %>
     <li class="link active"><a href="/catalog/instrument">Instruments</a></li>
