Add styles for category-detail view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -236,6 +236,12 @@ a {
   }
 }
 
+.category-controls{
+  display: flex;
+  gap: 1rem;
+  align-self: flex-end;
+}
+
 footer {
   padding: 1em;
   text-align: center;
