--- a/views/instrument_form.ejs
+++ b/views/instrument_form.ejs
@@ -5,71 +5,72 @@
     <div class="container">
       <%- include('./partials/nav',{active:active}) %>
       <main class="main">
-        <h1><%= title %></h1>
-        <form method="post" enctype="multipart/form-data">
-          <div class="form-field">
-            <label for="name">Name:</label
-            ><input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Name of instrument"
-              value="<%- instrument ? instrument.name: '' %>"
-            />
-          </div>
-
-          <div class="form-field">
-            <label for="category">Category:</label>
-            <select name="category" id="category">
-                <option value="">--Please select a category--</option>
-                <% categories.forEach((category)=>{ %>
-                    <% if(instrument){ %>
-                        <% if(instrument.category._id.toString()===category._id.toString()){ %>
-                            <option value="<%= category._id %>" selected> <%= category.name %></option>
-                        <% }else{ %>
-                            <option value="<%= category._id %>"> <%= category.name %></option>
-                        <% } %>
-                    <% }else{ %>
-                        <option value="<%= category._id %>"> <%= category.name %></option>
-                    <% } %>
-                <% }); %>
-            </select>
-          </div>
-
-          <div class="form-field">
-            <label for="description">Description:</label
-            ><input
-              type="text"
-              id="description"
-              name="description"
-              placeholder="A small description about the instrument"
-              value="<%- instrument ? instrument.description: '' %>"
-            />
-          </div>
-
-          <div class="form-field">
-            <label for="price">Price (in $):</label
-            ><input type="number" id="price" name="price" value="<%- instrument ? instrument.price: '' %>" />
-          </div>
-
-          <div class="form-field">
-            <label for="number">Availble:</label
-            ><input type="number" id="number" name="number" value="<%- instrument ? instrument.number: '' %>" />
-          </div>
-
-          <div class="form-field">
-            <label for="image">Image URL:</label
-            ><input type="file" id="image" name="image" />
-          </div>
-
-          <button type="submit" class="btn">Submit</button>
-        </form>
+        <div class="form-section">
+          <h2><%= title %></h2>
+          <form method="post" enctype="multipart/form-data">
+            <div class="field-wrapper">
+              <div class="label-wrapper">
+                <label for="name">Name</label>
+                <label for="category">Category</label>
+                <label for="description">Description</label>
+                <label for="price">Price (in $)</label>
+                <label for="number">Availble</label>
+                <label for="image">Image</label>
+              </div>
+              <div class="inputs-wrapper">
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  placeholder="Name of instrument"
+                  value="<%- instrument ? instrument.name: '' %>"
+                />
+                <select name="category" id="category">
+                  <option value="">--Please select a category--</option>
+                  <% categories.forEach((category)=>{ %> <% if(instrument){ %> <%
+                  if(instrument.category._id.toString()===category._id.toString()){
+                  %>
+                  <option value="<%= category._id %>" selected>
+                    <%= category.name %>
+                  </option>
+                  <% }else{ %>
+                  <option value="<%= category._id %>"><%= category.name %></option>
+                  <% } %> <% }else{ %>
+                  <option value="<%= category._id %>"><%= category.name %></option>
+                  <% } %> <% }); %>
+                </select>
+                <input
+                  type="text"
+                  id="description"
+                  name="description"
+                  placeholder="A small description about the instrument"
+                  value="<%- instrument ? instrument.description: '' %>"
+                />
+                <input
+                  type="number"
+                  id="price"
+                  name="price"
+                  value="<%- instrument ? instrument.price: '' %>"
+                />
+                <input
+                  type="number"
+                  id="number"
+                  name="number"
+                  value="<%- instrument ? instrument.number: '' %>"
+                />
+                <input type="file" id="image" name="image" />
+              </div>
+            </div>
+            <button type="submit" class="btn">Submit</button>
+          </form>
+        </div>
+      </main>
         <div class="errors">
           <% if(errors){ %> <% errors.forEach((error)=>{ %>
           <p><%= error.msg %></p>
           <% }); %> <% } %>
         </div>
-      </main>
+      
       <%- include('./partials/footer') %>
     </div>
   </body>
