--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -236,6 +236,41 @@ a {
   }
 }
 
+.form-section{
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  border-radius: 24px;
+  background-color: ghostwhite;
+}
+form{
+  display: flex;
+  width: max-content;
+  gap: 1rem;
+  flex-direction: column;
+
+  .field-wrapper{
+    display: flex;
+    gap: 1rem;
+  }
+
+  .label-wrapper,.inputs-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  label{
+    font-weight: bold;
+  }
+
+}
+
+
+
 .category-controls{
   display: flex;
   gap: 1rem;
