--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,10 +52,14 @@ a {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+
+    @media (max-width: 700px) {
+     font-size: 1.25rem;
+    }
   }
 
   .links {
-    padding: 1em;
+    padding: 1em 0;
     display: flex;
 
     justify-content: space-between;
@@ -105,7 +109,7 @@ a {
 .instruments {
   padding: 1em;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   grid-template-rows: auto;
   gap: 1em;
 }
@@ -160,6 +164,11 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   grid-template-rows: auto;
   gap: 1em;
+
+  @media (max-width: 700px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .instrument-card {
   display: flex;
@@ -182,6 +191,17 @@ a {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    text-wrap: nowrap;
+  }
+
+  @media (max-width: 700px) {
+    flex-direction: column;
+    align-items: center;
+
+    .instrument-card-content{
+      align-items: center;
+    }
   }
 }
 
