Update to use new data structure

--- a/views/instrument_detail.ejs
+++ b/views/instrument_detail.ejs
@@ -10,7 +10,7 @@
                 <div class="image"><img src=<%= instrument.image %> alt=""></div>
                 <div class="instrument-content">
                     <div class="name"><%= instrument.name %></div>
-                    <div class="instrument-category"><div class="field">Category:   </div><%= instrument.category.name %></div>
+                    <div class="instrument-category"><div class="field">Category:   </div><%= instrument.category %></div>
                     <div class="description"><div class="field">Description:</div><%= instrument.description %></div>
                     <div class="price"><div class="field">Price:</div>$<%= instrument.price %></div>
                     <div class="number"><div class="field">Available:</div><%= instrument.number %></div>
