Update to use instrument_id

--- a/views/instrument_delete.ejs
+++ b/views/instrument_delete.ejs
@@ -9,7 +9,7 @@
         <p>Do you really want to delete this Instrument?</p>
         <form  method="post">
             <div class="form-field">
-                <input type="hidden" name="instrumentid" value="<%= instrument._id %>">
+                <input type="hidden" name="instrumentid" value="<%= instrument.instrument_id %>">
                 <button type="submit" class="btn">Delete</button>
             </div>
         </form>
