--- a/views/category_delete.ejs
+++ b/views/category_delete.ejs
@@ -18,7 +18,7 @@
         <p>Do you really want to delete this category?</p>
         <form  method="post">
             <div class="form-field">
-                <input type="hidden" name="categoryid" value="<%= category._id %>">
+                <input type="hidden" name="categoryid" value="<%= category.category_id %>">
                 <button type="submit" class="btn">Delete</button>
             </div>
         </form>
